--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -15,8 +16,12 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "^4.6.4"
   }
 }
