--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -20,8 +20,10 @@
     "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/styled-components": "^5.1.25",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4"
   }
 }
