--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:svgs": "npx @svgr/cli -d src/presentation/components/ui/Icons src/assets/icons --typescript --icon --ref",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch"
@@ -16,6 +17,7 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.35",
